fixing bug with shifting the whole website

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html {
 }
 
 body {
+    overflow-y: scroll;
     display: flex;
     margin: 0px;
 }
